deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictactoe-service
  labels:
    app: tictactoe
spec:
  type: NodePort
  selector:
    app: tictactoe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
