deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gruppemfjm.dhbw.schoeppi5.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tictactoe-service
            port: 
              number: 80
